# iroha-type

./: .gitignore  Cargo.toml  LICENSE  README.md
data/rules/: romaji.yaml
data/words/: basic_common.json
src/: app.rs  lib.rs  main.rs
src/engine/: game.rs  judge.rs  level.rs  mod.rs  romaji.rs  stats.rs  timer.rs
src/store/: json.rs  mod.rs  sqlite.rs
src/ui/: chart.rs  details.rs  mod.rs  play.rs  ranking.rs  result.rs  settings.rs  top.rs
src/util/: config.rs  keymap.rs  mod.rs  sound.rs  width.rs
tests/: engine_judge_test.rs  romaji_rules_test.rs
