[package]
name = "typewell-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TypeWell TUI Team"]
description = "TypeWell 国語R を Rust + ratatui でTUI再現"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
itertools = "0.13"
directories = "5.0"

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled", "chrono"]

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

